<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <View
        android:id="@+id/verticalDivider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@id/horizontalMiddleLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontalMiddleLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/calculateCoordinatesButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/verticalDivider"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/leftVerticalSupportView"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/leftHorizontalSupportView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/coordinatesHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/coordinates_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/coordinateX1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:hint="@string/x1_hint"
            android:inputType="numberDecimal"
            android:minWidth="48dp"
            app:layout_constraintBottom_toTopOf="@id/leftHorizontalSupportView"
            app:layout_constraintRight_toLeftOf="@id/leftVerticalSupportView" />

        <EditText
            android:id="@+id/coordinateY1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:hint="@string/y1_hint"
            android:inputType="numberDecimal"
            android:minWidth="48dp"
            app:layout_constraintBottom_toTopOf="@id/leftHorizontalSupportView"
            app:layout_constraintLeft_toRightOf="@id/leftVerticalSupportView" />

        <EditText
            android:id="@+id/coordinateX2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:hint="@string/x2_hint"
            android:inputType="numberDecimal"
            android:minWidth="48dp"
            app:layout_constraintRight_toLeftOf="@id/leftVerticalSupportView"
            app:layout_constraintTop_toBottomOf="@id/leftHorizontalSupportView" />

        <EditText
            android:id="@+id/coordinateY2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:hint="@string/y2_hint"
            android:inputType="numberDecimal"
            android:minWidth="48dp"
            app:layout_constraintLeft_toRightOf="@id/leftVerticalSupportView"
            app:layout_constraintTop_toBottomOf="@id/leftHorizontalSupportView" />


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/calculateCoordinatesButton"
        app:layout_constraintLeft_toLeftOf="@id/verticalDivider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/rightHorizontalSupportView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/measurementsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/measurements_header"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:hint="@string/height_hint"
            android:inputType="numberDecimal"
            android:minWidth="48dp"
            app:layout_constraintBottom_toTopOf="@id/rightHorizontalSupportView"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/width"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:gravity="center"
            android:hint="@string/width_hint"
            android:inputType="numberDecimal"
            android:minWidth="48dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rightHorizontalSupportView" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/calculateCoordinatesButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/button_calculate"
        app:layout_constraintBottom_toTopOf="@+id/horizontalMiddleLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/verticalDivider" />

    <Button
        android:id="@+id/calculateHeightWidthButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/button_calculate"
        app:layout_constraintBottom_toTopOf="@+id/horizontalMiddleLine"
        app:layout_constraintLeft_toRightOf="@id/verticalDivider"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateCoordinatesButton">

        <TextView
            android:id="@+id/perimeterHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perimeter_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/perimeterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toRightOf="@id/perimeterHeader"
            tools:text="124" />

        <TextView
            android:id="@+id/squareHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@id/perimeterHeader" />

        <TextView
            android:id="@+id/squareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toRightOf="@id/squareHeader"
            app:layout_constraintTop_toBottomOf="@id/perimeterHeader"
            tools:text="4325" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>