<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/radius_header"

        app:layout_constraintBottom_toTopOf="@+id/radiusInput" />

    <EditText
        android:id="@+id/radiusInput"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="36dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/radius_hint"

        app:layout_constraintBottom_toTopOf="@+id/horizontalMiddleLine" />

    <View
        android:id="@+id/horizontalMiddleLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/calculateCoordinatesButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/button_calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalMiddleLine" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateCoordinatesButton">

        <TextView
            android:id="@+id/perimeterHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perimeter_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/perimeterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toRightOf="@id/perimeterHeader"
            tools:text="124" />

        <TextView
            android:id="@+id/squareHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/square_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintTop_toBottomOf="@id/perimeterHeader" />

        <TextView
            android:id="@+id/squareText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintLeft_toRightOf="@id/squareHeader"
            app:layout_constraintTop_toBottomOf="@id/perimeterHeader"
            tools:text="4325" />


    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>